[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -181,28 +181,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="key_ctrl_a">Vyberte všechny (Ctrl+A)</string>
     <string name="key_tab">Tabulátor</string>
     <string name="start_on_bottom">Začněme u dna</string>
-    <string name="start_on_bottom_when_loading_document">Po načtení dokumentu kurzor polohy na jeho konci</string>
+    <string name="start_on_bottom_when_loading_document">Po načtení dokumentu umístit kurzor na konec souboru</string>
     <string name="unordered_list_character">Znak nečíslovaného seznamu</string>
     <string name="character_to_start_items_of_unordered_list_with">Jaký znak se použije k označení nečíslovaných seznamů</string>
     <string name="unordered_list_char_dash">Pomlčka (-)</string>
     <string name="unordered_list_char_asterisk">Hvězdička (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor může upravovat pouze lokální, offline dostupné dokumenty a nepodporuje správce souborů, které neposkytují plnou cestu ke souborům.</string>
-    <string name="sync_to_local_folder_notice">Poznámka: Sync Apps může umístit soubory do vlastních složek.</string>
+    <string name="sync_to_local_folder_notice">Poznámka: Synchronizační aplikace mohou ukládat soubory do vlastních složek. Otevřete je tím, že změníte složku s dokumenty Markor, nebo pomocí správce souborů.</string>
     <string name="configure_in_the_apps_settings">Nastavte v nastavení aplikace</string>
     <string name="vertical_alignment">Vertikální vyrovnání</string>
-    <string name="horizontal_alignment">Horizontální přizpůsobení</string>
+    <string name="horizontal_alignment">Vodorovné zarovnání</string>
     <string name="default_">Standardní</string>
-    <string name="left">Levice</string>
-    <string name="right">Správná</string>
-    <string name="top">Top</string>
-    <string name="bottom">Bůh</string>
-    <string name="center">Centrum</string>
+    <string name="left">Vlevo</string>
+    <string name="right">Vpravo</string>
+    <string name="top">Nahoře</string>
+    <string name="bottom">Dole</string>
+    <string name="center">Na střed</string>
     <string name="textaction_spacing">Rozestupy mezi textovými moduly</string>
     <string name="horizontal_space_between_textactions">Vodorovný prostor mezi tlačítky textových modulů</string>
     <string name="center_text">Center</string>
     <string name="edit_text_in_center_of_screen">Editovat text uprostřed obrazovky</string>
-    <string name="clipboard">Kličková deska</string>
     <string name="select_existing_document">Vyberte existující dokument</string>
     <string name="open_source_licenses">Otevřené zdrojové licence</string>
     <string name="rate_this_app">Potvrďte tuto zprávu</string>
