[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -202,21 +202,22 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="horizontal_space_between_textactions">Vodorovný prostor mezi tlačítky textových modulů</string>
     <string name="center_text">Center</string>
     <string name="edit_text_in_center_of_screen">Editovat text uprostřed obrazovky</string>
+    <string name="clipboard">Schránka</string>
     <string name="select_existing_document">Vyberte existující dokument</string>
-    <string name="open_source_licenses">Otevřené zdrojové licence</string>
-    <string name="rate_this_app">Potvrďte tuto zprávu</string>
+    <string name="open_source_licenses">Open Source licence</string>
+    <string name="rate_this_app">Ohodnoťte tuto aplikaci</string>
     <string name="translate">Přeložit</string>
     <string name="more_info_and_help">Více informací a pomoc</string>
-    <string name="report_bugs">Report</string>
-    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Více informací o darování vývojářů nebo o přispění k tomuto projektu.</string>
-    <string name="join_community">Vstup do Společenství</string>
-    <string name="bug_reports_suggest_improvements">Dejte nám zpětnou vazbu, nahlašte chyby nebo naznačte zlepšení</string>
+    <string name="report_bugs">Nahlásit chybu</string>
+    <string name="more_info_on_how_to_donate_or_otherwise_support_this_project_text">Více informací o daru vývojáři, nebo o přispění k tomuto projektu.</string>
+    <string name="join_community">Připojte se ke komunitě</string>
+    <string name="bug_reports_suggest_improvements">Dejte nám zpětnou vazbu, nahlašte chyby nebo navrhněte vylepšení</string>
     <string name="help_translating_this_app">Přeložte tuto aplikaci do jiných jazyků</string>
-    <string name="source_code">Zdrojový kodex</string>
+    <string name="source_code">Zdrojový kód</string>
     <string name="project_license">Licence projektu</string>
-    <string name="project_contribution_info">Informace o příspěvku projektu</string>
+    <string name="project_contribution_info">Informace o přispění projektu</string>
     <string name="more_info_on_how_to_contribute_to_this_project">Více informací o tom, jak přispět k tomuto projektu</string>
-    <string name="contribute_code_to_this_project_anybody_welcome">Přispět k projektu kódem, který každý přivítá, včetně nově příchozích.</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Přispět k projektu kódem. Je vítán kdokoliv, včetně nováčků</string>
     <string name="project_team">Tým projektu</string>
     <string name="contributors_public_add_yourself_description">Předložte informace o přispěvateli, které zde budou zobrazeny na základě opt-in po příspěvku</string>
     <string name="descending">klesání</string>
