[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -219,13 +219,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="more_info_on_how_to_contribute_to_this_project">Více informací o tom, jak přispět k tomuto projektu</string>
     <string name="contribute_code_to_this_project_anybody_welcome">Přispět k projektu kódem. Je vítán kdokoliv, včetně nováčků</string>
     <string name="project_team">Tým projektu</string>
-    <string name="contributors_public_add_yourself_description">Předložte informace o přispěvateli, které zde budou zobrazeny na základě opt-in po příspěvku</string>
-    <string name="descending">klesání</string>
-    <string name="ascending">Jak růst</string>
-    <string name="disable_spelling_underline">Nesrozumitelné zdůraznění</string>
-    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Návrhy na klávesnici zůstávají, červený stres se vytrácí.</string>
-    <string name="location">Výborná poloha</string>
-    <string name="text_lines">Text Linky</string>
+    <string name="contributors_public_add_yourself_description">Zobrazit informace o přispěvatelích. Po přispění mohou přispěvatelé poskytnout informace, které se zde zobrazí na základě opt-in</string>
+    <string name="descending">sestupně</string>
+    <string name="ascending">vzestupně</string>
+    <string name="disable_spelling_underline">Deaktivovat podtržení pravopisných chyb</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Návrhy oprav zůstanou, červené podtržení zmizí</string>
+    <string name="location">Pozice</string>
+    <string name="text_lines">Řádka textu</string>
     <string name="text_characters">Text znaky</string>
     <string name="text_words">Textová slova</string>
     <string name="directory">Generální ředitelství</string>
