[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -228,15 +228,14 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="text_lines">Řádka textu</string>
     <string name="text_characters">Text znaky</string>
     <string name="text_words">Textová slova</string>
-    <string name="directory">Generální ředitelství</string>
-    <string name="recently_viewed_documents">Nedávno jsem viděl dokumenty</string>
+    <string name="directory">Adresář</string>
+    <string name="recently_viewed_documents">Poslení zobrazené dokumenty</string>
     <string name="details">Podrobnosti</string>
-    <string name="calendar">Termíny</string>
-    <string name="warning_disallowed_sd_access">The app doesn\'t have the permission to save this file, all changes will be lost.</string>
-    <string name="error_picture_selection">Nebyl zvolen Âžádný obrázek.</string>
-    <string name="gallery_picture">Obraz galerie</string>
-    <string name="camera_picture">kamera obraz</string>
-    <string name="enable_undo_and_redo_be_patient">If you are interested in any of the following procedures, please contact us on the website.</string>
+    <string name="calendar">Kalendář</string>
+    <string name="warning_disallowed_sd_access">Varování! Aplikace nemá oprávnění k uložení tohoto souboru, všechny změny budou ztraceny. Neexistuje řešení a není možnost žádného oznámení. Android zde odpírá jakýkoliv přístup.</string>
+    <string name="error_picture_selection">Nebyl vybrán, pořízen nebo uložen žádný obrázek.</string>
+    <string name="gallery_picture">Obrázek z galerie</string>
+    <string name="camera_picture">Obrázek z fotoaparátu</string>
     <string name="description">Popis</string>
     <string name="edit_picture">Upravit obrázek</string>
     <string name="math">Math</string>
