[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -236,18 +236,19 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="error_picture_selection">Nebyl vybrán, pořízen nebo uložen žádný obrázek.</string>
     <string name="gallery_picture">Obrázek z galerie</string>
     <string name="camera_picture">Obrázek z fotoaparátu</string>
+    <string name="enable_undo_and_redo_be_patient">Povolit akce Zpět a Znovu. Vhodné pouze pro pokročilé použití, opatrně, abyste neodstranili nic důležitého. Zavřete a otevřete editor pro vymazání historie.</string>
     <string name="description">Popis</string>
     <string name="edit_picture">Upravit obrázek</string>
-    <string name="math">Math</string>
-    <string name="table_of_contents">Tabulka obsahu</string>
+    <string name="math">Matematika</string>
+    <string name="table_of_contents">Obsah</string>
     <string name="miscellaneous">Ostatní</string>
-    <string name="textaction">Textová akce</string>
-    <string name="textactions">Akce textu</string>
-    <string name="prefer_view">Názor budoucí volby</string>
-    <string name="no_calendar_app_is_installed">Žádný kalendář aplikace není nainstalován!</string>
-    <string name="popular_documents">Populační dokumenty</string>
+    <string name="textaction">Textové moduly</string>
+    <string name="textactions">Textové moduly</string>
+    <string name="prefer_view">Upřednostnit mód náhledu</string>
+    <string name="no_calendar_app_is_installed">Žádná aplikace kalendáře není nainstalována!</string>
+    <string name="popular_documents">Oblíbené dokumenty</string>
     <string name="color">Barva</string>
-    <string name="zero_width_space">Prostor pro nulu</string>
+    <string name="zero_width_space">Mezera s nulovou šířkou</string>
     <string name="basic_color_scheme">Základní barevný režim</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Změní barvu pozadí a popředí textového editoru. Upraví téma aplikace dostupné světlé a tmavé téma. Zvýraznění syntaxe zůstává stejné.</string>
     <string name="preset">Preset</string>
