[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -256,20 +256,20 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="background">Pozadí</string>
     <string name="set_foreground_or_background_color_hexcolor_also_possible">Nastavit barvu popředí nebo pozadí textu? Je možné i vložení hex kódu barvy.</string>
     <string name="type">Typ</string>
-    <string name="folder">Folder</string>
-    <string name="folder_is_created_without_extension">- složky jsou vytvořeny bez rozšíření souboru</string>
-    <string name="keep_existing_file">- Soubory a složky nejsou přepsány</string>
+    <string name="folder">Adresář</string>
+    <string name="folder_is_created_without_extension">- adresáře jsou vytvořeny bez přípony souboru</string>
+    <string name="keep_existing_file">- soubory a složky se nepřepíšou</string>
     <string name="multiple_windows">Více oken</string>
     <string name="font">Písmo</string>
-    <string name="open_new_documents_always_in_new_window">Otevřít dokumenty vždy v oddělených oknech a zmáčkněte klávesou \'recents\' vašeho zařízení.</string>
+    <string name="open_new_documents_always_in_new_window">Otevřít dokumenty vždy v samostatných oknech. Přepínání pomocí tlačítka \"Nedávné\" vašeho zařízení.</string>
     <string name="enter_or_select_format">Zadejte nebo vyberte formát</string>
-    <string name="pick_date">Pick date</string>
-    <string name="pick_time">Obrovský čas</string>
-    <string name="get_format_instead_date_or_time">Načte místo data nebo času formát</string>
-    <string name="always_use_current_date_and_time">Vždy používat aktuální &amp; čas</string>
-    <string name="result">Jak porazit</string>
-    <string name="just_time">Čas pouze</string>
-    <string name="just_date">Date pouze</string>
+    <string name="pick_date">Vybrat datum</string>
+    <string name="pick_time">Vybrat čas</string>
+    <string name="get_format_instead_date_or_time">Formát místo data nebo času</string>
+    <string name="always_use_current_date_and_time">Vždy používat aktuální datum &amp; čas</string>
+    <string name="result">Výsledek</string>
+    <string name="just_time">Pouze čas</string>
+    <string name="just_date">Pouze datum</string>
     <string name="last_used">Poslední použité</string>
     <string name="my_note">Moje poznámka</string>
     <string name="close">Konec</string>
