[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -288,7 +288,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_the_document_from_main_view">Dokument můžete otevřít z hlavního zobrazení dole, z prohlížeče souborů nebo launcheru. Je zde také možnost připojit sdílený text do aplikace Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notebook je složka, kterou Markor načítá v prohlížeči souborů, když je aplikace spuštěna. Je to domácí složka vašich souborů.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote je nejrychlejší možnost pro psaní poznámek. Je to soubor ve formátu Markdown s výchozí pozicí &gt;Notebook/QuickNote.md&lt;, můžete nastavit vlastní cestu k souboru v nastaveních.</string>
-    <string name="todo_is_the_easiest_way_">Řídit své úkoly s ToDo. Je to soubor ve formátu todo.txt s výchozí polohou &gt;Notebook/todo.txt&lt;, můžete nastavit nastavení na vlastní filedráhu.</string>
+    <string name="todo_is_the_easiest_way_">Spravujte své úkoly pomocí ToDo. Je to soubor ve formátu todo.txt s výchozím umístění v &gt;Notebook/todo. xt&lt;, můžete nastavit vlastní cestu k souborům v nastavení.</string>
     <string name="navigationbar_color">Barva navigačního panelu</string>
     <string name="black">Černá</string>
     <string name="white">Bílá</string>
@@ -296,34 +296,34 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view_mode">Režim zobrazení</string>
     <string name="edit_mode">Režim úprav</string>
     <string name="mount_storage">Připojit úložiště</string>
-    <string name="application_needs_access_to_storage_mount_it">Pro přístup k tomuto úložišti je nutné získat záložní zálohu, čímž se vám umožní získat vysazení a vybrat si z nich.</string>
+    <string name="application_needs_access_to_storage_mount_it">Pro přístup k tomuto úložišti je vyžadováno oprávnění. Pro povolení přístupu připojte úložiště. Potvrďte toto dialogové okno, aby se zobrazilo vyskakovací okno. Vyberte úložiště a potvrďte výběr tlačítkem.</string>
     <string name="share_into">Sdílet do</string>
     <string name="favourite">Oblíbené</string>
     <string name="favourites">Oblíbené</string>
     <string name="please_wait">Čekejte prosím</string>
-    <string name="app_start_folder">Zobrazit spouštěcí složku</string>
-    <string name="tab_width">Rozšířka tabulek</string>
-    <string name="amount_of_space_for_tab">Stříbení mezer znaků k zobrazení tabulky</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Vybraný soubor může být prostý soubor. Chcete jej otevřít v editoru nebo v jiné aplikaci?\n\nNepokoušejte se otevírat binární soubory. Pokud si nejste jistí, otevřete se s jinou aplikací.</string>
-    <string name="list_in_recent_files">Seznam v nedávných spisech</string>
-    <string name="reload">Aktualizovat</string>
+    <string name="app_start_folder">Úvodní složka aplikace</string>
+    <string name="tab_width">Šířka tabulátoru</string>
+    <string name="amount_of_space_for_tab">Počet mezer jako zobrazení tabulátoru</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Vybraný soubor může být prostý soubor. Chcete jej otevřít v editoru nebo v jiné aplikaci?\n\nNepokoušejte se otevírat binární soubory. Pokud si nejste jistí, otevřete soubor jinou aplikací.</string>
+    <string name="list_in_recent_files">Seznam posledních souborů</string>
+    <string name="reload">Obnovit</string>
     <string name="wrap_words">Zalamování slov</string>
-    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Měkká přestávka, pokud text není vhodný pro šířku obrazovky.</string>
-    <string name="recursive_search_in_current_directory">V aktuálním adresáři se používá rekursivní vyhledávání, kde je vyhledávání v klášteře (*) regex, jinak zkontrolujte, zda je dotaz obsažen.</string>
-    <string name="always_open_with_this_app">Vždy otevřené s touto aplikací</string>
-    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Pokud seznam obsahuje rozšíření souboru, můžete použít \"Žádný, .html, .css , .js\" například pokud chcete editovat webové soubory a ty bez rozšíření souborů.</string>
-    <string name="template">Template</string>
-    <string name="send_debug_log">Odešle dluhovou ztrátu</string>
-    <string name="help_by_sending_debug_information_to_the_developer">Pomocí odesílání debug informací vývojářům (s). Data jsou odeslána e-mailem a můžete vidět všechny odeslané údaje před odesláním.</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Měkké zalomení, pokud text neodpovídá šířce obrazovky. Jinak je třeba povolit horizontální posuv.</string>
+    <string name="recursive_search_in_current_directory">V aktuálním adresáři se používá rekursivní vyhledávání. Pokud dotaz obsahuje hvězdičku (*), použije se regex. Jinak se kontroluje výskyt hledaného výrazu.</string>
+    <string name="always_open_with_this_app">Vždy otvírat s touto aplikací</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Vždy otvírat soubory touto aplikací, pokud mají příponu souboru z následujícího seznamu. Použijte \'None, .html, .css , .js\' pokud například chcete upravovat webové soubory a soubory bez přípony souboru.</string>
+    <string name="template">Šablona</string>
+    <string name="send_debug_log">Odeslat protokol ladění</string>
+    <string name="help_by_sending_debug_information_to_the_developer">Pomoc odesláním informací o ladění aplikace vývojářům. Data jsou odesílána e-mailem přes vaši e-mailovou aplikaci a před odesláním si můžete prohlédnout všechna odeslaná data. Další možnost \"Odeslat ladící protokol\" najdete v horní nabídce, pokud je povoleno. Vytváří koncept e-mailu.</string>
     <string name="print_pdf">Tisk / PDF</string>
-    <string name="bigger_headings">Zahajování záhad</string>
-    <string name="increase_text_size_of_headings_according_to_level">Zvýšit velikost textových hlavic podle úrovně (# h1, ## h2. ##### h3…)</string>
+    <string name="bigger_headings">Větší nadpisy</string>
+    <string name="increase_text_size_of_headings_according_to_level">Zvětšit velikost nadpisů podle úrovně (# h1, ## h2. ### h3…)</string>
     <string name="current">Aktuální</string>
-    <string name="record_audio">Record Audio</string>
-    <string name="attach">Attach</string>
+    <string name="record_audio">Nahrát zvuk</string>
+    <string name="attach">Připojit</string>
     <string name="copy_file">Kopírovat soubor</string>
-    <string name="page">Pád</string>
-    <string name="experimental_features">Zkušenosti</string>
+    <string name="page">Stránka</string>
+    <string name="experimental_features">Experimentální funkce</string>
     <string name="tools">Nástroje</string>
     <string name="reading">Přečtěte</string>
     <string name="read">Přečtěte</string>
