[ci skip] Crowdin translation bot: New translations for Czech

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -327,28 +327,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tools">Nástroje</string>
     <string name="reading">Přečtěte</string>
     <string name="read">Přečtěte</string>
-    <string name="table">Ping pong</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Kolik sloupců? Tisk tlačítka na stůl dlouho pro spuštění tabulky (vložte hlavičku), stiskněte krátký pro přidání řádku.</string>
-    <string name="example_of_a_markdown_table">Příklad Markdown tabulky</string>
+    <string name="table">Tabulka</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Kolik sloupců? Stiskněte tlačítko dlouze pro začátek tabulky (vložení záhlaví), stiskněte krátce pro přidání řádku.</string>
+    <string name="example_of_a_markdown_table">Příklad tabulky Markdown</string>
     <string name="delete_lines">Odstranit řádky</string>
     <string name="unordered_list">Nečíslovaný seznam</string>
-    <string name="ordered_list">Seřazený seznam</string>
-    <string name="check_list">Seznam šeků</string>
+    <string name="ordered_list">Číslovaný seznam</string>
+    <string name="check_list">Checklist</string>
     <string name="open_link">Otevřít odkaz</string>
     <string name="common_color_picker">Výběr barvy</string>
     <string name="date_and_time">Datum a čas</string>
     <string name="jump_to_bottom">Přejít na konec</string>
-    <string name="quote">Cenová nabídka</string>
-    <string name="heading">Záhlaví</string>
-    <string name="heading_1">Úroveň 1</string>
-    <string name="heading_2">Úroveň 2</string>
-    <string name="heading_3">Úroveň 3</string>
+    <string name="quote">Citace</string>
+    <string name="heading">Nadpis</string>
+    <string name="heading_1">Nadpis 1</string>
+    <string name="heading_2">Nadpis 2</string>
+    <string name="heading_3">Nadpis 3</string>
     <string name="bold">Tučné</string>
     <string name="italic">Kurzíva</string>
-    <string name="strikeout">Přeškrtnout</string>
+    <string name="strikeout">Přeškrtnuto</string>
     <string name="inline_code">Inline kód</string>
     <string name="horizontal_line">Vodorovná čára</string>
-    <string name="toggle_done">Přepnout hotovo</string>
+    <string name="toggle_done">Zaškrtnout</string>
     <string name="link_color">Barva odkazu</string>
     <string name="add_context">Přidat kontext</string>
     <string name="add_project">Přidat projekt</string>
@@ -357,11 +357,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_new_file_or_folder">Vytvořit nový soubor nebo složku</string>
     <string name="choose_format">Zvolte formát</string>
     <string name="selected">Vybrané</string>
-    <string name="back">Zpátky</string>
+    <string name="back">Zpět</string>
     <string name="expand_collapse">Rozbalit / Sbalit</string>
     <string name="essential">Základní</string>
     <string name="append_human_readable_uuid_to_new_tasks">Připojit okem čitelné UUID k novým úkolům</string>
-    <string name="action_order">Objednávka akce</string>
+    <string name="action_order">Pořadí tlačítek</string>
     <string name="load_default_settings">Načíst výchozí nastavení</string>
     <string name="drag">Přetažení</string>
     <string name="file_encryption_password">Šifrovací heslo souboru</string>
